--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SERVER_PORT=3000
 
-MONGODB_URL
+MONGODB_URL="mongodb+srv://lovenshier:1234@cluster0.mwqem.mongodb.net/test?retryWrites=true&w=majority"
